=============

Availability
------------
This release is not yet available.

Supported platforms
-------------------

New user-visible features
-------------------------

Bugs fixed
----------
- Bug 2007 - uan: Remove deprecation on SetRxThresholdDb
- Bug 2221 - network: Remove constraint on size of ns3::Packet Tag objects
- Bug 2450 - LogDistancePropagationLossModel is not continuous
- Bug 2477 - DCF manager assert
- Bug 2492 - uan: Make use of RxGain attribute in UanPhyGen class
- Bug 2511 - HT Greenfield is not working
- Bug 2513 - ParetoRandomVariable needs a "scale", not a "mean" attribute.
- Bug 2521 - Include ipv6-option.h in wscript
- Bug 2527 - PrintRoutingTable extended to add an optional Time::Units parameter
- Bug 2529 - Missing trace when Block ACK timeout is triggered or when missing MPDUs are announced by a Block ACK response
- Bug 2530 - Rename aodv::SetBalckListTimeout to aodv::SetBlackListTimeout
- Bug 2532 - Inconsistencies between 802.11n MCS and NSS value reported in TXVECTOR
- Bug 2533 - Provide a better 802.11n/ac PHY abstraction model for SIMO, MISO and MIMO
- Bug 2535 - memory leak in bench-simulator.cc
- Bug 2536 - fixed dead assignment and potential memory leak in wimax
- Bug 2538 - fixed dead assignment on tap-bridge
- Bug 2540 - fixed dead assignment on mesh/ie-dot11s-perr
- Bug 2541 - preamble not assigned correctly
- Bug 2542 - dead assignment on wifi mac-low
- Bug 2545 - Optimized build fails for flow-monitor
- Bug 2547 - dead assignments on various tcp congestion controls
- Bug 2551 - wifi preamble should be part of TXVECTOR
- Bug 2552 - Remove code duplication between Yans and Spectrum
- Bug 2561 - TCP can not use Connect after a BindToNetDevice
- Bug 2563 - Modify pybindgen version check to >= minimum version required
- Bug 2564 - Simulation crashes when CtsTimeout is triggered for A-MPDU transmissions

Known issues
------------
In general, known issues are tracked on the project tracker available
at http://www.nsnam.org/bugzilla/