@@ -58,6 +58,7 @@ us a note on ns-developers mailing list.</p>
     parameter to specify the time units used on the report.  The new parameter is
     optional and if not specified defaults to the previous behavior (Time::S).
 </li>
+<li><b>TxopTrace</b>: new trace source exported by EdcaTxopN.</li>
 </ul>
 <h2>Changes to existing API:</h2>
 <ul>
